1.0.5:

2006-09-11  Murray Cumming,  <murrayc@murrayc.com>

	* glom/base_db.cc:  Base_DB::create_table(): Quote the field names to avoid a postgres error when 
	creating the table with an id field based on a table name with special characters such as -.

2006-09-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/user-guide/C/glom.xml: Fixed some validation problems.
	* examples/Makefile.am: Add all example files to EXTRA_DIST, to fix distcheck.

2006-09-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/fields/box_db_table_definition.h:
	* glom/mode_design/fields/box_db_table_definition.cc: Moved some checks from on_adddel_changed() 
	to check_field_change(), and added a check for an existing primary key, so we can give a nice 
	refusal warning to the user instead of a postgres error. This is then used from on_adddel_changed() 
	and on_Properties_apply(). Bug #350636.

2006-09-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: dialog_connection: Use underline mnemonics for the labels 
	and mark them as labels for the entries, for accessibility. Also use an underline 
	mnemonic for the Connect button. Bug #349357 from Ryan Paul.

2006-09-09  Fryderyk Dziarmagowski  <freetz@gmx.net>

	* configure.in: Added update-mime-database configure option which sets/unsets UPDATE_MIME_DATABASE.
	* Makefile.am: Do not update the mime database if UPDATE_MIME_DATABASE is not set.
	This is apparently helpful for distro packagers, and other GNOME source tarballs have the same thing.
	Bug #351989.

2006-09-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: insert_example_data(): Use the new ignore_quoted_separators 
	option with Utils::string_separate() so we are not confused by nested newlines. 
	And check for newlines in the resulting row so we can ignore those rows as errors.
	* glom/libglom/utils.cc: string_separate(): More efficient implementation when ignoring 
	quoted separators, doing less memory copying.
